<resources>
    <string name="StartApp">200148963</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">Guide</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="armas1">This is Free Fire\'s most recent assault rifle. It behaves like a kind of M4A1 but with worse features, except for damage. It\'s a good choice if you opt for medium distance combat, as you\'ll be able to do good damage. Keep in mind that you can add all kinds of extras except silencers, so it will always be a noisy weapon in your hands.</string>
    <string name="armas10">If you think you\'re going to spend more time inside buildings or in other enclosed spaces, SCAR is a good choice.</string>
    <string name="armas11">The mix of damage and shooting cadence, along with its long range and decent accuracy, make GROZA one of the best assault rifles in Free Fire. If it\'s already very good, the fact that we can add extras of all kinds makes your enemies tremble with fear. The downside is that it\'s only available in drops, i.e. in supply boxes.</string>
    <string name="armas12">Pay attention to these boxes because if you see one containing the GROZA weapon, take it immediately. You won\'t regret it!</string>
    <string name="armas13">The FAMAS is one of the best assault rifles in this Battle Royale, but also the hardest to handle. Bullets are always fired in bursts, so it\'s crucial to aim well so you don\'t waste them. It has a long range, plus decent damage and precision, making this the most lethal weapon in a short distance.</string>
    <string name="armas14">We recommend the FAMAS for those who are more experienced and know how to handle their recoil due to gusts.</string>
    <string name="armas2">Use the AN94 if you can\'t find a more powerful assault rifle.</string>
    <string name="armas3">The M4A1 is one of the most famous weapons in the game and the most powerful assault rifle. Add to that its good damage and precision, and it\'s no wonder that this weapon is the favorite of many players. In addition, it\'s often easy to find during a game, especially in military locations.</string>
    <string name="armas4">Its great advantage is that we can add all kinds of extras, and it is perfect for both novices and experienced players.</string>
    <string name="armas5">Armed with the highest damage and precision of any assault rifle, the M14 is a lethal weapon in the hands of skilled players. In range, it\'s only one point behind the M4A1, so it\'s useful at long range. It is true that it has the lowest shooting cadence in the list, but it is possible to add all kinds of accessories to turn the weapon into a more powerful one.</string>
    <string name="armas6">It is a weapon aimed at experienced players, and has a smaller magazine compared to the rest.</string>
    <string name="armas7">The AK is another of the best-known weapons not only in this game, but in the world of Battle Royales and shooters. The features do justice to its fame, as it is one of the rifles that have more damage and range. The negative point is that it is the least accurate of the list although, luckily, it can be solved with extras.</string>
    <string name="armas8">If you\'re patient with shots, two or three bullet bursts, you can eliminate enemies quickly.</string>
    <string name="armas9">SCAR isn\'t the most accurate weapon in the game either, and in fact, it\'s worse than AN94 in almost every feature. Its plus point is that it\'s the assault rifle that fires the most bullets per second, so it\'s useful in close-range matches. Fortunately, all possible accessories can be added to make up for these shortfalls.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="diam1">Become the best with these tips</string>
    <string name="diam10">It\'s not very smart to explore these areas from the beginning, but if we\'re halfway through the game, there will always be things to take. Surely there will be fewer players lurking around to eliminate us.</string>
    <string name="diam11">In places like this, it\'s also common to find kits to improve bulletproof vests. Pay attention as you explore because, although it\'s okay to have a level one vest, it\'s highly recommended to upgrade it soon. The last players will always have a powerful weapon.</string>
    <string name="diam12">Pay attention to the safe area</string>
    <string name="diam13">The safe zone is described by a white circle, which we can see both on the map and in the mini-map. Inside this zone we will be safe, since, outside of it, the radioactive storm will take away our life with the passage of time.</string>
    <string name="diam14">If we pay attention to the safe area, we will often see players running for their lives to get away from the storm, before it\'s too late. Situations like this are a perfect opportunity to eliminate opponents.</string>
    <string name="diam15">Look at the mini-map</string>
    <string name="diam16">The mini-map is very important to avoid a whole series of threats to our survival.</string>
    <string name="diam17">If you hear gunshots close to you, look for the red triangles in the mini-map, as they will indicate the origin of the shots. This way you will know where there are enemies nearby. At other times, we\'ll hear explosions and vehicles driven by players. Both will be marked by yellow or red dots around the mini-map. That will tell us which direction the sound is coming from.</string>
    <string name="diam18">In addition to radiation, there are also danger zones. These zones are marked by red circles with the label Danger. After a few seconds, a bomber will destroy that place, so get away as soon as possible! UAV drones reveal the position of players within the yellow circle. Never expose yourself to others, but stay close to see where the revealed players are.</string>
    <string name="diam19">Take cover</string>
    <string name="diam2">In Free Fire we have many tools at our disposal to become the last survivor standing, but you must also know how to use them. Discover how to become the best Free Fire player with these tips.</string>
    <string name="diam20">All over the map there are buildings, walls, containers, stones, trees, etc. Use them as cover! The worst thing we can do in this game is be exposed. While you\'re on the move, try to protect yourself with the environment so that you don\'t fall out of the way in the face of observant players.</string>
    <string name="diam21">However, that means we have to move carefully. We\'ll never know if behind that wall, or that wall of the building, hides an opponent with a shotgun, ready to get us out of the game with two surprise shots.</string>
    <string name="diam22">Use vehicles with care</string>
    <string name="diam23">The vehicles are used to move quickly to other places, where there is quality loot, and also to pass over the absent-minded players that we find on the road.</string>
    <string name="diam24">If we make too much noise, the other players will be able to hear us. For that reason, use cars, vans and motorcycles carefully, so as not to reveal our position.</string>
    <string name="diam3">Choose the right landing site</string>
    <string name="diam4">Choosing the landing site is only the first step to victory. Although it may seem trivial, it\'s not; determining where you\'ll start will allow you to decide whether to start the game right or not. It\'s important to choose a place isolated from other players, near a city but not so close to it.</string>
    <string name="diam5">Therefore, the best option is to fall out of towns and cities, observe where others fall and then enter to explore. It is fundamental not to expose ourselves too much until we are properly equipped, especially when we move around places with loot in quantity and quality, where many times there will be players.</string>
    <string name="diam6">Get equipment</string>
    <string name="diam7">As soon as we land, the first thing we have to do is to find weapons, protection, first aid kits, among other things. At the beginning of the game, the best thing to do is to grab everything we can find, as we can always improve and change the equipment.</string>
    <string name="diam8">Explore military sites</string>
    <string name="diam9">If there are no enemies in sight, it\'s a good idea to explore sites like watchtowers, cargo containers, trenches or military tents. There are usually good loot in these kinds of places, both in weaponry and supplies.</string>
</resources>