<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    tools:context=".TipsActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_marginBottom="10dp"
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ad_view"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/home"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:padding="10dp"
                android:text="@string/diam1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/diam2"
                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:padding="10dp"
                android:text="@string/diam3"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/diam4"
                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:text="@string/diam5"
                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView47"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:padding="10dp"
                android:text="@string/diam6"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/diam7"
                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:padding="10dp"
                android:text="@string/diam8"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/diam9"
                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/diam10"
                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView52"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/diam11"
                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView53"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:padding="10dp"
                android:text="@string/diam12"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView54"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/diam13"
                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:text="@string/diam14"
                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:padding="10dp"
                android:text="@string/diam15"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView57"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/diam16"
                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:text="@string/diam17"
                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView58"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/diam18"
                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:padding="10dp"
                android:text="@string/diam19"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:text="@string/diam20"
                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView62"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/diam21"
                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView63"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:padding="10dp"
                android:text="@string/diam22"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView64"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/diam23"
                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView65"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingRight="15dp"
                android:text="@string/diam24"
                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/rate"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_above="@+id/ad_view"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:src="@drawable/star" />

    <LinearLayout
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />
</RelativeLayout>
